# backend

./: pyproject.toml
.github/workflows/: test.yml
scripts/: test.sh
src/common/: exceptions.py  logging_config.py
src/common/constants/: choices.py
src/common/management/commands/: create_dummy_data.py
src/config/: urls.py  views.py
src/config/settings/: base.py  prod.py
src/counsels/: models.py  serializers.py  urls.py  views.py
src/counsels/migrations/: 0001_initial.py  0002_initial.py
src/customers/: models.py  serializers.py  urls.py  views.py
src/customers/migrations/: 0001_initial.py  0002_initial.py  0003_remove_customer_key_customersecurity.py
src/frontend/: build
src/oauth/: serializers.py  urls.py  views.py
src/users/: models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
